# Uva

./: CMakeLists.txt  README.md
sample_input/vol_005_500-599/: 573_The-Snail.cpp
sample_input/vol_006_600-699/: 621_Secret-Research.cpp
vol_001_100-199/: .100_3n+1.cpp.swo  .100_3n+1.cpp.swp  100_3n+1.cpp  102_Ecological-Bin-Packing.cpp  156_Ananagrams.cpp
vol_002_200-299/: 230_Borrowers.cpp  256_Quirksome-Squares.cpp  272_Tex-Quotes.cpp
vol_003_300-399/: 394_Mapmaker.cpp
vol_004_400-499/: .401_Palindromes.cpp.swo  .401_Palindromes.cpp.swp  401_Palindromes.cpp  414_Machined-Surfaces.cpp  462_Bridge-Hand-Evaluator.cpp
vol_005_500-599/: 573_The-Snail.cpp
vol_006_600-699/: 621_Secret-Research.cpp  661_Blowing-Fuses.cpp
vol_009_900-999/: 927_Integer-Sequence-From-Addition-Of-Terms.cpp
vol_010_1000-1099/: 10646_What-is-the-Card?.cpp
vol_011_1100-1199/: 1124_Celebrity-Jeopardy.cpp
vol_100_10000-10099/: 10038_Jolly-Jumpers.cpp
vol_103_10300-10399/: .10324_Zeros_and_Ones.cpp.swp  10300_Ecological-Premium.cpp  10324_Zeros_and_Ones.cpp
vol_104_10400-10499/: .10424_Love-Calculator.cpp.swp  10424_Love-Calculator.cpp
vol_105_10500-10599/: .10583_ubiquitous-religions.cpp.swo  .10583_ubiquitous-religions.cpp.swp  10583_ubiquitous-religions.cpp
vol_109_10900-10999/: 10919_Prerequisites?.cpp
vol_110_11000-11099/: 11044_Searching-for-Nessy.cpp
vol_111_11100-11199/: 11172_Relational-Operator.cpp
vol_113_11300-11399/: 11332_Summing-Digits.cpp  11340_Newspaper.cpp  11364_Parking.cpp
vol_114_11400-11499/: 11498_Division-of-Nlogonia.cpp
vol_115_11500-11599/: .11586_Train-Tracks.cpp.swp  11547_Automatic-Answer.cpp  11559_Event-Planning.cpp  11586_Train-Tracks.cpp
vol_116_11600-11699/: 11661_Burger-Time?.cpp  11679_Sub-Prime.cpp
vol_117_11700-11799/: 11727_Cost-Cutting.cpp  11764_Jumping-Mario.cpp  11799_Horror-Dash.cpp
vol_119_11900-11999/: 11926_multitasking.cpp  11942_Lumberjack-Sequencing.cpp  11991_easy_problem_from_RL.cpp
vol_120_12000-12099/: 12015_Google-is-Feeling-Lucky.cpp
vol_122_12200-12299/: .12247_Jollo.cpp.swp  12250_Language-Detection.cpp  12279_Emoogle-Balance.cpp  12289_One-Two-Three.cpp
vol_123_12300-12399/: 12372_Packing-for-Holiday.cpp
vol_124_12400-12499/: 12403_Save-Setu.cpp
vol_125_12500-12599/: 12577_Hajj-E-Akbar.cpp
