cmake_minimum_required(VERSION 3.0)

cmake_policy(VERSION 2.8.8)

add_definitions(-std=c++11 -Wall -Werror)

PROJECT(uva-solutions)

#problem set volumes

set(v1 ${CMAKE_CURRENT_SOURCE_DIR}/vol_001_100-199/)
set(v2 ${CMAKE_CURRENT_SOURCE_DIR}/vol_002_200-299/)
set(v3 ${CMAKE_CURRENT_SOURCE_DIR}/vol_003_300-399/)
set(v4 ${CMAKE_CURRENT_SOURCE_DIR}/vol_004_400-499/)
set(v5 ${CMAKE_CURRENT_SOURCE_DIR}/vol_005_500-599/)
set(v6 ${CMAKE_CURRENT_SOURCE_DIR}/vol_006_600-699/)
set(v7 ${CMAKE_CURRENT_SOURCE_DIR}/vol_007_700-799/)
set(v8 ${CMAKE_CURRENT_SOURCE_DIR}/vol_008_800-899/)
set(v9 ${CMAKE_CURRENT_SOURCE_DIR}/vol_009_900-999/)
set(v10 ${CMAKE_CURRENT_SOURCE_DIR}/vol_010_1000-1099/)
set(v11 ${CMAKE_CURRENT_SOURCE_DIR}/vol_011_1100-1199/)
set(v12 ${CMAKE_CURRENT_SOURCE_DIR}/vol_012_1200-1299/)
set(v13 ${CMAKE_CURRENT_SOURCE_DIR}/vol_013_1300-1399/)
set(v14 ${CMAKE_CURRENT_SOURCE_DIR}/vol_014_1400-1499/)
set(v15 ${CMAKE_CURRENT_SOURCE_DIR}/vol_015_1500-1599/)
set(v16 ${CMAKE_CURRENT_SOURCE_DIR}/vol_016_1600-1699/)
set(v17 ${CMAKE_CURRENT_SOURCE_DIR}/vol_017_1700-1799/)

#contest volumes

set(v100 ${CMAKE_CURRENT_SOURCE_DIR}/vol_100_10000-10099/)
set(v101 ${CMAKE_CURRENT_SOURCE_DIR}/vol_101_10100-10199/)
set(v102 ${CMAKE_CURRENT_SOURCE_DIR}/vol_102_10200-10299/)
set(v103 ${CMAKE_CURRENT_SOURCE_DIR}/vol_103_10300-10399/)
set(v104 ${CMAKE_CURRENT_SOURCE_DIR}/vol_104_10400-10499/)
set(v105 ${CMAKE_CURRENT_SOURCE_DIR}/vol_105_10500-10599/)
set(v106 ${CMAKE_CURRENT_SOURCE_DIR}/vol_106_10600-10699/)
set(v107 ${CMAKE_CURRENT_SOURCE_DIR}/vol_107_10700-10799/)
set(v108 ${CMAKE_CURRENT_SOURCE_DIR}/vol_108_10800-10899/)
set(v109 ${CMAKE_CURRENT_SOURCE_DIR}/vol_109_10900-10999/)
set(v110 ${CMAKE_CURRENT_SOURCE_DIR}/vol_110_11000-11099/)
set(v111 ${CMAKE_CURRENT_SOURCE_DIR}/vol_111_11100-11199/)
set(v112 ${CMAKE_CURRENT_SOURCE_DIR}/vol_112_11200-11299/)
set(v113 ${CMAKE_CURRENT_SOURCE_DIR}/vol_113_11300-11399/)
set(v114 ${CMAKE_CURRENT_SOURCE_DIR}/vol_114_11400-11499/)
set(v115 ${CMAKE_CURRENT_SOURCE_DIR}/vol_115_11500-11599/)
set(v116 ${CMAKE_CURRENT_SOURCE_DIR}/vol_116_11600-11699/)
set(v117 ${CMAKE_CURRENT_SOURCE_DIR}/vol_117_11700-11799/)
set(v118 ${CMAKE_CURRENT_SOURCE_DIR}/vol_118_11800-11899/)
set(v119 ${CMAKE_CURRENT_SOURCE_DIR}/vol_119_11900-11999/)
set(v120 ${CMAKE_CURRENT_SOURCE_DIR}/vol_120_12000-12099/)
set(v121 ${CMAKE_CURRENT_SOURCE_DIR}/vol_121_12100-12199/)
set(v122 ${CMAKE_CURRENT_SOURCE_DIR}/vol_122_12200-12299/)
set(v123 ${CMAKE_CURRENT_SOURCE_DIR}/vol_123_12300-12399/)
set(v124 ${CMAKE_CURRENT_SOURCE_DIR}/vol_124_12400-12499/)
set(v125 ${CMAKE_CURRENT_SOURCE_DIR}/vol_125_12500-12599/)
set(v126 ${CMAKE_CURRENT_SOURCE_DIR}/vol_126_12600-12699/)

#program executables
add_executable(272_Tex-Quotes  ${v2}/272_Tex-Quotes)
add_executable(573_The-Snail ${v5}/573_The-Snail)
add_executable(621_Secret-Research ${v6}/621_Secret-Research.cpp)
add_executable(1124_Celebrity-Jeopardy ${v11}/1124_Celebrity-Jeopardy.cpp)
