cmake_minimum_required(VERSION 3.0)

cmake_policy(VERSION 2.8.8)

add_definitions(-std=c++11 -g -Wall)

PROJECT(uva-solutions)

#problem set volumes

set(v1 ${CMAKE_CURRENT_SOURCE_DIR}/vol_001_100-199/)
set(v2 ${CMAKE_CURRENT_SOURCE_DIR}/vol_002_200-299/)
set(v3 ${CMAKE_CURRENT_SOURCE_DIR}/vol_003_300-399/)
set(v4 ${CMAKE_CURRENT_SOURCE_DIR}/vol_004_400-499/)
set(v5 ${CMAKE_CURRENT_SOURCE_DIR}/vol_005_500-599/)
set(v6 ${CMAKE_CURRENT_SOURCE_DIR}/vol_006_600-699/)
set(v7 ${CMAKE_CURRENT_SOURCE_DIR}/vol_007_700-799/)
set(v8 ${CMAKE_CURRENT_SOURCE_DIR}/vol_008_800-899/)
set(v9 ${CMAKE_CURRENT_SOURCE_DIR}/vol_009_900-999/)
set(v10 ${CMAKE_CURRENT_SOURCE_DIR}/vol_010_1000-1099/)
set(v11 ${CMAKE_CURRENT_SOURCE_DIR}/vol_011_1100-1199/)
set(v12 ${CMAKE_CURRENT_SOURCE_DIR}/vol_012_1200-1299/)
set(v13 ${CMAKE_CURRENT_SOURCE_DIR}/vol_013_1300-1399/)
set(v14 ${CMAKE_CURRENT_SOURCE_DIR}/vol_014_1400-1499/)
set(v15 ${CMAKE_CURRENT_SOURCE_DIR}/vol_015_1500-1599/)
set(v16 ${CMAKE_CURRENT_SOURCE_DIR}/vol_016_1600-1699/)
set(v17 ${CMAKE_CURRENT_SOURCE_DIR}/vol_017_1700-1799/)

#contest volumes

set(v100 ${CMAKE_CURRENT_SOURCE_DIR}/vol_100_10000-10099/)
set(v101 ${CMAKE_CURRENT_SOURCE_DIR}/vol_101_10100-10199/)
set(v102 ${CMAKE_CURRENT_SOURCE_DIR}/vol_102_10200-10299/)
set(v103 ${CMAKE_CURRENT_SOURCE_DIR}/vol_103_10300-10399/)
set(v104 ${CMAKE_CURRENT_SOURCE_DIR}/vol_104_10400-10499/)
set(v105 ${CMAKE_CURRENT_SOURCE_DIR}/vol_105_10500-10599/)
set(v106 ${CMAKE_CURRENT_SOURCE_DIR}/vol_106_10600-10699/)
set(v107 ${CMAKE_CURRENT_SOURCE_DIR}/vol_107_10700-10799/)
set(v108 ${CMAKE_CURRENT_SOURCE_DIR}/vol_108_10800-10899/)
set(v109 ${CMAKE_CURRENT_SOURCE_DIR}/vol_109_10900-10999/)
set(v110 ${CMAKE_CURRENT_SOURCE_DIR}/vol_110_11000-11099/)
set(v111 ${CMAKE_CURRENT_SOURCE_DIR}/vol_111_11100-11199/)
set(v112 ${CMAKE_CURRENT_SOURCE_DIR}/vol_112_11200-11299/)
set(v113 ${CMAKE_CURRENT_SOURCE_DIR}/vol_113_11300-11399/)
set(v114 ${CMAKE_CURRENT_SOURCE_DIR}/vol_114_11400-11499/)
set(v115 ${CMAKE_CURRENT_SOURCE_DIR}/vol_115_11500-11599/)
set(v116 ${CMAKE_CURRENT_SOURCE_DIR}/vol_116_11600-11699/)
set(v117 ${CMAKE_CURRENT_SOURCE_DIR}/vol_117_11700-11799/)
set(v118 ${CMAKE_CURRENT_SOURCE_DIR}/vol_118_11800-11899/)
set(v119 ${CMAKE_CURRENT_SOURCE_DIR}/vol_119_11900-11999/)
set(v120 ${CMAKE_CURRENT_SOURCE_DIR}/vol_120_12000-12099/)
set(v121 ${CMAKE_CURRENT_SOURCE_DIR}/vol_121_12100-12199/)
set(v122 ${CMAKE_CURRENT_SOURCE_DIR}/vol_122_12200-12299/)
set(v123 ${CMAKE_CURRENT_SOURCE_DIR}/vol_123_12300-12399/)
set(v124 ${CMAKE_CURRENT_SOURCE_DIR}/vol_124_12400-12499/)
set(v125 ${CMAKE_CURRENT_SOURCE_DIR}/vol_125_12500-12599/)
set(v126 ${CMAKE_CURRENT_SOURCE_DIR}/vol_126_12600-12699/)

#program executables
add_executable(272_Tex-Quotes  ${v2}/272_Tex-Quotes)
add_executable(573_The-Snail ${v5}/573_The-Snail)
add_executable(621_Secret-Research ${v6}/621_Secret-Research.cpp)
add_executable(661_Blowing-Fuses ${v6}/661_Blowing-Fuses.cpp)
add_executable(1124_Celebrity-Jeopardy ${v11}/1124_Celebrity-Jeopardy.cpp)
add_executable(10300_Ecological-Premium ${v103}/10300_Ecological-Premium.cpp)
add_executable(11044_Searching-for-Nessy ${v110}/11044_Searching-for-Nessy.cpp)
add_executable(11172_Relational-Operator ${v111}/11172_Relational-Operator.cpp)
add_executable(11364_Parking ${v113}/11364_Parking.cpp)
add_executable(11498_Division-of-Nlogonia ${v114}/11498_Division-of-Nlogonia.cpp)
add_executable(11547_Automatic-Answer ${v115}/11547_Automatic-Answer.cpp)
add_executable(11559_Event-Planning ${v115}/11559_Event-Planning.cpp)
add_executable(11727_Cost-Cutting ${v117}/11727_Cost-Cutting.cpp)
add_executable(11799_Horror-Dash ${v117}/11799_Horror-Dash.cpp)
add_executable(12250_Language-Detection ${v122}/12250_Language-Detection.cpp)
add_executable(12279_Emoogle-Balance ${v122}/12279_Emoogle-Balance.cpp)
add_executable(12289_One-Two-Three ${v122}/12289_One-Two-Three.cpp)
add_executable(12372_Packing-for-Holiday ${v123}/12372_Packing-for-Holiday.cpp)
add_executable(12403_Save-Setu ${v124}/12403_Save-Setu.cpp)
add_executable(12577_Hajj-E-Akbar ${v125}/12577_Hajj-E-Akbar.cpp)
add_executable(11332_Summing-Digits ${v113}/11332_Summing-Digits.cpp)
add_executable(11679_Sub-Prime ${v116}/11679_Sub-Prime.cpp)
add_executable(11764_Jumping-Mario ${v117}/11764_Jumping-Mario.cpp)
add_executable(11942_Lumberjack-Sequencing ${v119}/11942_Lumberjack-Sequencing.cpp)
add_executable(12015_Google-is-Feeling-Lucky ${v120}/12015_Google-is-Feeling-Lucky.cpp)
add_executable(10324_Zeros_and_Ones ${v103}/10324_Zeros_and_Ones.cpp)
add_executable(10424_Love-Calculator ${v104}/10424_Love-Calculator.cpp)
add_executable(10919_Prerequisites? ${v109}/10919_Prerequisites?.cpp)
add_executable(11586_Train-Tracks ${v115}/11586_Train-Tracks.cpp)
add_executable(11661_Burger-Time? ${v116}/11661_Burger-Time?.cpp)
